oprava chyb při počátečním načítání